--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39mx)     \u001b[38;5;66;03m# Even though x is a private attribute, we can access it through the getter method. Thus the \"through get_x()\" is printed.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39my)     \u001b[38;5;66;03m# Even though y is a private attribute, we can access it through the getter method. Thus the \"through get_y()\" is printed.\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39m__x)\n",
+      "Cell \u001b[1;32mIn[20], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39mx)     \u001b[38;5;66;03m# Even though x is a private attribute, we can access it through the getter method. Thus the \"through get_x()\" is printed.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39my)     \u001b[38;5;66;03m# Even though y is a private attribute, we can access it through the getter method. Thus the \"through get_y()\" is printed.\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39m__x)   \u001b[38;5;66;03m# This will cause an error because __x is a private attribute.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m p1 \u001b[38;5;241m=\u001b[39m Point(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m20\u001b[39m)\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'Point' object has no attribute '__x'"
      ]
     }
@@ -808,7 +808,8 @@
     "p1 = Point(10, 20)\n",
     "print(p1.x)     # Even though x is a private attribute, we can access it through the getter method. Thus the \"through get_x()\" is printed.\n",
     "print(p1.y)     # Even though y is a private attribute, we can access it through the getter method. Thus the \"through get_y()\" is printed.\n",
-    "print(p1.__x)   # This will cause an error because __x is a private attribute."
+    "print(p1.__x)   # This will cause an error because __x is a private attribute.\n",
+    "p1 = Point(10, 20)\n"
    ]
   },
   {
@@ -836,6 +837,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. Yes, you can access x and y directly as they are exposed as properties, but their access with invoke the corresponding getter methods\n",
+    "2. This happens as p1.x triggers the get_x() methods, as x is definded as a property and the print statement in get_x() is executed\n",
+    "3. Yes, you can access the mangled private attibutes _point_x and _point_y directly using their actural internal names,bypassing the property \n",
+    "4. _x is private attibute, and python's name mangling changes its name internally to _point__x. Trying to access __x directly will result in an AttributeError because the attribute does not exist under that name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Save your work with commit before proceeding to the next section.\n"
    ]
   },
@@ -851,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,9 +887,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "through get_x()\n",
+      "10\n",
+      "through get_y()\n",
+      "20\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Point' object has no attribute '__x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39mget_x())   \u001b[38;5;66;03m# x is a private attribute, we can access it through the getter method. Thus the \"through get_x()\" is printed.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39mget_y())     \u001b[38;5;66;03m# y is a private attribute, we can access it through the getter method. Thus the \"through get_y()\" is printed.\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(p1\u001b[38;5;241m.\u001b[39m__x)          \u001b[38;5;66;03m# This will cause an error because __x is a private attribute.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m (p1\u001b[38;5;241m.\u001b[39mx)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Point' object has no attribute '__x'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "p1 = Point(10, 20)\n",
@@ -906,6 +939,22 @@
     "2. Question 2: When we print p1.x and p1.__x, it causes an error. Why? How can we access it? <br>\n",
     "3. Question 3: What is the difference between the code with __property__ and the code without __property__? <br>\n",
     "</section>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. No, when x and y are defined as properties using property(get_x, set_x), accessing them directly (e.g., p1.x) always invokes the corresponding getter or setter methods.\n",
+    "2. Error with p1.x:\n",
+    "p1.x does not cause an error; it invokes the get_x() method because x is defined as a property.\n",
+    "\n",
+    "Error with p1.__x:\n",
+    "__x is a private attribute, and Python applies name mangling, renaming it internally to _Point__x. You can access it directly using p1._Point__x if necessary, though it bypasses the intended encapsulation.\n",
+    "3. With property:\n",
+    "You can access attributes like p1.x or p1.y as if they were public, but getter and setter methods are invoked in the background, allowing controlled access while maintaining a clean interface.\n",
+    "Without property:\n",
+    "You must explicitly call methods like p1.get_x() and p1.set_x(), which adds verbosity to the code and makes it less intuitive."
    ]
   },
   {
@@ -960,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,9 +1024,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message (fixed) \"Hello\" :\n",
+      "- args: ('World',)\n",
+      "- kwargs: {'key1': 'Awesome', 'key2': 'Cool'}\n",
+      "Hello World, Awesome, Cool\n",
+      "Message (fixed) \"Hello\" :\n",
+      "- args: ('David',)\n",
+      "- kwargs: {'key1': 'Genius', 'key2': 'Cool'}\n",
+      "Hello David, Genius, Cool\n"
+     ]
+    }
+   ],
    "source": [
     "greet_function = returning_function('Hello')\n",
     "\n",
@@ -987,9 +1051,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message (fixed) \"Bye\" :\n",
+      "- args: ('World',)\n",
+      "- kwargs: {'key1': 'Great', 'key2': 'to see you'}\n",
+      "Bye World, Great, to see you\n",
+      "Message (fixed) \"Bye\" :\n",
+      "- args: ('Everyone',)\n",
+      "- kwargs: {'key1': 'See you', 'key2': 'again'}\n",
+      "Bye Everyone, See you, again\n",
+      "<function returning_function.<locals>.inner_function at 0x0000029A425DFCE0>\n"
+     ]
+    }
+   ],
    "source": [
     "bye_function = returning_function('Bye')\n",
     "\n",
@@ -1001,9 +1081,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function returning_function.<locals>.inner_function at 0x0000029A425DE2A0>\n"
+     ]
+    }
+   ],
    "source": [
     "print (returning_function('Hello'))"
    ]
@@ -1045,6 +1133,150 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wrapper(func):\n",
+    "    def inner_function(*args, **kwargs):\n",
+    "        print('before function call')\n",
+    "        result = func(*args, **kwargs)\n",
+    "        print('after function call')\n",
+    "        return result\n",
+    "    return inner_function\n",
+    "\n",
+    "@wrapper\n",
+    "def greet_function(name, **kwargs):\n",
+    "    print(f\"Greeting {name}!\")\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(f\"{key}: {value}\")\n",
+    "    return \"Message (fixed) param: Greeting Completed!\"\n",
+    "\n",
+    "@wrapper\n",
+    "def bye_function(name, **kwargs):\n",
+    "    print(f\"Saying goodbye to {name}!\")\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(f\"{key}: {value}\")\n",
+    "    return \"Message (fixed) param: Goodbye Completed!\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before function call\n",
+      "Greeting Hello!\n",
+      "after function call\n",
+      "Message (fixed) param: Greeting Completed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(greet_function('Hello'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before function call\n",
+      "Greeting World!\n",
+      "key1: Awesome\n",
+      "key2: Cool\n",
+      "after function call\n",
+      "before function call\n",
+      "Greeting David!\n",
+      "key1: Genius\n",
+      "key2: Cool\n",
+      "after function call\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Message (fixed) param: Greeting Completed!'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greet_function('World', key1='Awesome', key2='Cool')\n",
+    "greet_function('David', key1='Genius', key2='Cool')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before function call\n",
+      "Saying goodbye to World!\n",
+      "key1: Great\n",
+      "key2: to see you\n",
+      "after function call\n",
+      "before function call\n",
+      "Saying goodbye to Everyone!\n",
+      "key1: See you\n",
+      "key2: again\n",
+      "after function call\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Message (fixed) param: Goodbye Completed!'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bye_function('World', key1='Great', key2='to see you')\n",
+    "bye_function('Everyone', key1='See you', key2='again')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Difference in Outputs:\n",
+    "\n",
+    "The difference in outputs arises from the custom implementation of each function:\n",
+    "        greet_function is designed to greet someone.\n",
+    "\n",
+    "        bye_function is designed to say goodbye.\n",
+    "\n",
+    "    Both have their unique print statements, but they use the same wrapper function to print \"before function call\" and \"after function call.\"\n",
+    "\n",
+    "Where Does \"Message (fixed) param\" Come From?\n",
+    "    \"Message (fixed) param\" is part of the returned value in both functions (greet_function and bye_function). It is hardcoded as the return string in these functions:\n",
+    "\n",
+    "        return \"Message (fixed) param: Greeting Completed!\" in greet_function.\n",
+    "        \n",
+    "        return \"Message (fixed) param: Goodbye Completed!\" in bye_function."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1053,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1118,12 +1350,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 8, 16]\n",
+      "[1, 2, 4, 8, 16, 32, 64, 128, 256, 512]\n",
+      "[1, 3, 9, 27, 81]\n",
+      "[1, 3, 9, 27, 81, 243, 729, 2187, 6561, 19683]\n"
+     ]
+    }
+   ],
    "source": [
     "def power_function(n):\n",
-    "    ## your code here\n",
+    "    def calculated_powers(x):\n",
+    "        return [n**i for i in range(x)]\n",
+    "    return calculated_powers\n",
     "\n",
     "power_of_2 = power_function(2)\n",
     "print (power_of_2(5))\n",
@@ -1286,11 +1531,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting calculation...\n",
+      "Calculation complete!\n",
+      "15\n",
+      "Starting calculation...\n",
+      "Calculation complete!\n",
+      "50\n",
+      "Starting calculation...\n",
+      "Calculation complete!\n",
+      "5\n",
+      "Starting calculation...\n",
+      "Calculation complete!\n",
+      "Error: Division by zero\n"
+     ]
+    }
+   ],
    "source": [
-    "### Code your solution here.\n"
+    "### Code your solution here.\n",
+    "def operation_logger(func):\n",
+    "    def wrapper(num1, num2, operation):\n",
+    "        print(\"Starting calculation...\")\n",
+    "        result = func(num1, num2, operation)\n",
+    "        print(\"Calculation complete!\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "# Define the calculator function\n",
+    "@operation_logger\n",
+    "def calculator(num1, num2, operation):\n",
+    "    if operation == 'add':\n",
+    "        return num1 + num2\n",
+    "    elif operation == 'subtract':\n",
+    "        return num1 - num2\n",
+    "    elif operation == 'multiply':\n",
+    "        return num1 * num2\n",
+    "    elif operation == 'divide':\n",
+    "        return num1 / num2 if num2 != 0 else \"Error: Division by zero\"\n",
+    "    else:\n",
+    "        return \"Error: Invalid operation\"\n",
+    "\n",
+    "# Test cases\n",
+    "print(calculator(10, 5, 'add'))      # Should show logger messages and output 15\n",
+    "print(calculator(10, 5, 'multiply')) # Should show logger messages and output 50\n",
+    "print(calculator(10, 5, 'subtract')) # Should show logger messages and output 5\n",
+    "print(calculator(10, 0, 'divide'))   # Should show logger messages and output \"Error: Division by zero\"\n"
    ]
   },
   {
@@ -1323,6 +1614,41 @@
     " 1. Create the greet() function that takes a name parameter\n",
     " 2. Create the uppercase_decorator and its wrapper function\n",
     " 3. Apply the decorator to greet() and test it\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO, ALICE!\n",
+      "HELLO, BOB!\n",
+      "HELLO, CHARLIE!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the decorator\n",
+    "def uppercase_decorator(func):\n",
+    "    def wrapper(name):\n",
+    "        # Call the original function and convert the output to uppercase\n",
+    "        result = func(name)\n",
+    "        return result.upper()\n",
+    "    return wrapper\n",
+    "\n",
+    "# Define the greet function\n",
+    "@uppercase_decorator\n",
+    "def greet(name):\n",
+    "    return f\"Hello, {name}!\"\n",
+    "\n",
+    "# Test cases\n",
+    "print(greet(\"Alice\"))  # Output: HELLO, ALICE!\n",
+    "print(greet(\"Bob\"))    # Output: HELLO, BOB!\n",
+    "print(greet(\"Charlie\")) # Output: HELLO, CHARLIE!\n"
    ]
   },
   {
