--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -1686,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1785,11 +1785,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 12, 21, 5, 5, 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "### Code your solution here.\n"
+    "### Code your solution here.\n",
+    "import random\n",
+    "\n",
+    "# Define the decorator\n",
+    "def filter_random_numbers(func):\n",
+    "    def wrapper():\n",
+    "        # Call the original function to generate random numbers\n",
+    "        random_numbers = func()\n",
+    "        # Filter out numbers between 50 and 100\n",
+    "        filtered_numbers = [num for num in random_numbers if num < 50]\n",
+    "        return filtered_numbers\n",
+    "    return wrapper\n",
+    "\n",
+    "# Define the function to generate random numbers\n",
+    "@filter_random_numbers\n",
+    "def generate_random_numbers():\n",
+    "    # Generate a list of 10 random numbers\n",
+    "    return [random.randint(0, 100) for _ in range(10)]\n",
+    "\n",
+    "# Test \n",
+    "result = generate_random_numbers()\n",
+    "print(result)\n"
    ]
   },
   {
@@ -1825,11 +1854,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "Error: All arguments must be positive\n",
+      "None\n",
+      "750\n",
+      "Error: All arguments must be positive\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "### Code your solution here.\n"
+    "### Code your solution here.\n",
+    "def validate_input(func):\n",
+    "    def wrapper(*args):\n",
+    "        # Check if all arguments are positive numbers\n",
+    "        if any(num <= 0 for num in args):\n",
+    "            print(\"Error: All arguments must be positive\")\n",
+    "            return None\n",
+    "        # If all arguments are valid, execute the original function\n",
+    "        return func(*args)\n",
+    "    return wrapper\n",
+    "\n",
+    "# Define the function to multiply numbers\n",
+    "@validate_input\n",
+    "def multiply_numbers(*args):\n",
+    "    # Multiply all input numbers together\n",
+    "    result = 1\n",
+    "    for num in args:\n",
+    "        result *= num\n",
+    "    return result\n",
+    "\n",
+    "# Test\n",
+    "print(multiply_numbers(2, 3, 4))     \n",
+    "print(multiply_numbers(2, -3, 4))    \n",
+    "print(multiply_numbers(5, 10, 15))  \n",
+    "print(multiply_numbers(0, 4, 7))    "
    ]
   },
   {
