--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2001,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2129,11 +2129,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "Width cannot be negative. Setting to 0.\n",
+      "0\n",
+      "100 200\n"
+     ]
+    }
+   ],
    "source": [
     "### Code your solution here.\n",
+    "class Rectangle:\n",
+    "    def __init__(self, width, height):\n",
+    "        # Private attributes\n",
+    "        self._width = width\n",
+    "        self._height = height\n",
+    "\n",
+    "    # Getter for width\n",
+    "    @property\n",
+    "    def width(self):\n",
+    "        return self._width\n",
+    "\n",
+    "    # Setter for width\n",
+    "    @width.setter\n",
+    "    def width(self, value):\n",
+    "        if value < 0:\n",
+    "            print(\"Width cannot be negative. Setting to 0.\")\n",
+    "            self._width = 0\n",
+    "        else:\n",
+    "            self._width = value\n",
+    "\n",
+    "    # Getter for height\n",
+    "    @property\n",
+    "    def height(self):\n",
+    "        return self._height\n",
+    "\n",
+    "    # Setter for height\n",
+    "    @height.setter\n",
+    "    def height(self, value):\n",
+    "        if value < 0:\n",
+    "            print(\"Height cannot be negative. Setting to 0.\")\n",
+    "            self._height = 0\n",
+    "        else:\n",
+    "            self._height = value\n",
+    "\n",
+    "# Test \n",
+    "r1 = Rectangle(10, 20)\n",
+    "print(r1.width)  \n",
+    "r1.width = -10   \n",
+    "print(r1.width)  \n",
+    "\n",
+    "r2 = Rectangle(100, 200)\n",
+    "print(r2.width, r2.height) \n",
     "\n"
    ]
   },
