--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -2230,6 +2230,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a class attribute\n",
+      "I am a class attribute\n",
+      "Class attribute modified!\n",
+      "Class attribute modified!\n",
+      "Instance-specific attribute\n",
+      "Class attribute modified!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    # Define a class attribute\n",
+    "    class_attribute = \"I am a class attribute\"\n",
+    "\n",
+    "# Access the class attribute using the class name\n",
+    "print(MyClass.class_attribute)  \n",
+    "# Access the class attribute using an instance\n",
+    "obj = MyClass()\n",
+    "print(obj.class_attribute)  \n",
+    "\n",
+    "# Modify the class attribute using the class name\n",
+    "MyClass.class_attribute = \"Class attribute modified!\"\n",
+    "print(MyClass.class_attribute) \n",
+    "print(obj.class_attribute)     \n",
+    "\n",
+    "# Override the class attribute in an instance\n",
+    "obj.class_attribute = \"Instance-specific attribute\"\n",
+    "print(obj.class_attribute)     \n",
+    "print(MyClass.class_attribute)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
