--- a/ch10.ipynb
+++ b/ch10.ipynb
@@ -2332,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2364,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2373,7 +2373,7 @@
        "MyClass ([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2393,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2444,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2509,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2527,7 @@
        "[[2, 3, 4]]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2580,11 +2580,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 1, Values: [10, 20, 30]\n",
+      "ID: 2, Values: [15, 25, 35]\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "-15\n",
+      "135\n"
+     ]
+    }
+   ],
    "source": [
-    "## Code your solution here.\n"
+    "## Code your solution here.\n",
+    "class Numbers:\n",
+    "    def __init__(self, ID, values):\n",
+    "        self._ID = ID  # Private attribute for ID\n",
+    "        self._values = values  # Private attribute for values\n",
+    "\n",
+    "    # Getter for ID\n",
+    "    @property\n",
+    "    def ID(self):\n",
+    "        return self._ID\n",
+    "\n",
+    "    # Setter for ID\n",
+    "    @ID.setter\n",
+    "    def ID(self, value):\n",
+    "        if isinstance(value, int):\n",
+    "            self._ID = value\n",
+    "        else:\n",
+    "            raise ValueError(\"ID must be an integer\")\n",
+    "\n",
+    "    # Getter for values\n",
+    "    @property\n",
+    "    def values(self):\n",
+    "        return self._values\n",
+    "\n",
+    "    # Setter for values\n",
+    "    @values.setter\n",
+    "    def values(self, value):\n",
+    "        if all(isinstance(i, int) for i in value):\n",
+    "            self._values = value\n",
+    "        else:\n",
+    "            raise ValueError(\"All values must be integers\")\n",
+    "\n",
+    "    # String representation\n",
+    "    def __str__(self):\n",
+    "        return f\"ID: {self.ID}, Values: {self.values}\"\n",
+    "\n",
+    "    # Greater than comparison (__gt__)\n",
+    "    def __gt__(self, other):\n",
+    "        return sorted(self.values, reverse=True) > sorted(other.values, reverse=True)\n",
+    "\n",
+    "    # Less than comparison (__lt__)\n",
+    "    def __lt__(self, other):\n",
+    "        return sorted(self.values) < sorted(other.values)\n",
+    "\n",
+    "    # Equality comparison (__eq__)\n",
+    "    def __eq__(self, other):\n",
+    "        return set(self.values) == set(other.values) or set(self.values).issubset(set(other.values))\n",
+    "\n",
+    "    # Subtraction (__sub__)\n",
+    "    def __sub__(self, other):\n",
+    "        return sum(self.values) - sum(other.values)\n",
+    "\n",
+    "    # Addition (__add__)\n",
+    "    def __add__(self, other):\n",
+    "        return sum(self.values) + sum(other.values)\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "n1 = Numbers(1, [10, 20, 30])\n",
+    "n2 = Numbers(2, [15, 25, 35])\n",
+    "\n",
+    "print(n1)  # Output: ID: 1, Values: [10, 20, 30]\n",
+    "print(n2)  # Output: ID: 2, Values: [15, 25, 35]\n",
+    "\n",
+    "# Comparison\n",
+    "print(n1 > n2)  # Output: False\n",
+    "print(n1 < n2)  # Output: True\n",
+    "print(n1 == n2)  # Output: False\n",
+    "\n",
+    "# Arithmetic\n",
+    "print(n1 - n2)  # Output: -15\n",
+    "print(n1 + n2)  # Output: 135\n"
    ]
   },
   {
@@ -2596,16 +2681,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID: 1, Values: 1, 2, 3, 4, 5\n",
-      "ID: 2, Values: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10\n",
-      "ID: 1, Values: 1, 2, 3, 4, 5\n"
+      "ID: 1, Values: [1, 2, 3, 4, 5]\n",
+      "ID: 2, Values: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "ID: 1, Values: [100, 2, 3, 4, 5]\n"
      ]
     }
    ],
@@ -2636,14 +2721,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID: 1, Values: 100, 200, 300, 400, 500\n"
+      "ID: 1, Values: [100, 200, 300, 400, 500]\n"
      ]
     }
    ],
@@ -2666,7 +2751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
